--- a/About.html
+++ b/About.html
@@ -29,7 +29,7 @@
                 Designer, Reader, Nature Enthusiast
             </h1>
             <p class="p2">
-                My passions reside in creating beautiful experiences and designs that empower people. Whether I’m working to design products or materials that bolster an established or small, local business, I love working with people to create meaningful designs and experiences that leave a lasting impression. 
+                I’m dedicated to creating beautiful experiences and designs that empower people. Whether I’m designing for established brands or small local businesses, I enjoy collaborating with others to craft meaningful projects that leave a lasting impression.
                 <br><br>
                 Outside of work, you can find me nose-deep in my favorite fantasy books (I’m looking at you Lord of the Rings), hiking around Kentucky’s beautiful landscape, or coaching lacrosse.
                 <br><br>
