--- a/Footer.html
+++ b/Footer.html
@@ -12,13 +12,14 @@
 <body>
 
     <footer>
-
-        <div class="footer-logo">
-            <div class="footer-headshot">
-                <img src="./Website Images/Assets/Ben Thomas Official Headshot.jpg" id="footer-headshot" alt="Ben Thomas Headshot">
+        <a href="index.html">
+            <div class="footer-logo">
+                <div class="footer-headshot">
+                    <img src="./Website Images/Assets/Ben Thomas Official Headshot.jpg" id="footer-headshot" alt="Ben Thomas Headshot">
+                </div>
+                <img src="./Website Images/Logo/BT Logo Workmark-light grey.svg" alt="Ben Thomas Logo Wordmark">
             </div>
-            <img src="./Website Images/Logo/BT Logo Workmark-light grey.svg" alt="Ben Thomas Logo Wordmark">
-        </div>
+          </a>
 
         <div class="footer-links">
             <ul>
