--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 Hello There! <span class="h1-gradient">I'm Ben</span>
             </h1>
             <p class="p2">
-                I’ve got a knack for crafting visually engaging and functional designs that solve solutions and captivate audiences. Welcome to my portfolio!
+                I’ve got a knack for crafting visually engaging, functional designs that solve solutions and captivate audiences. Welcome to my portfolio!
             </p>
             <div class="hero-buttons">
                 <button class="btn-primary"><a href="#projects">Projects</a></button>
