--- a/nav.html
+++ b/nav.html
@@ -1,6 +1,6 @@
 
 <nav id="navbar">
-    <div class="nav-logo"><a href="index.html"><img src="./Website Images/Logo/Ben Thomas Official Logo Assets NEW_BT Full Horiz_light grey.svg" alt="Ben Thomas Logo"></a></div>
+    <div class="nav-logo"><a href="index.html"><img src="./Website Images/Logo/BT Logo-Bear Gradient-v1.svg" alt="Ben Thomas Logo"></a></div>
     <div class="nav-links">
         <ul>
             <li><a href="index.html">WORK</a></li>
