--- a/pristine clean case study.html
+++ b/pristine clean case study.html
@@ -42,10 +42,11 @@
         <a href="#other-projects">Other Projects</a>
         <a href="#intro">Back to Top<img src="./Website Images/Icons/Arrow Icon-light grey.svg"></a>
     </div>
-
-    <div class="side-nav-2">
-        <a href="#intro"><img src="./Website Images/Icons/Arrow Icon-light grey.svg"></a>
-    </div>
+    <a href="#intro">
+        <div class="side-nav-2">
+        <img src="./Website Images/Icons/Arrow Icon-light grey.svg">
+        </div>
+    </a>
 
 
     <main class="hidden">
