--- a/ignite.html
+++ b/ignite.html
@@ -41,10 +41,11 @@
 
 
 
-
-    <div class="side-nav-2">
-        <a href="#intro"><img src="./Website Images/Icons/Arrow Icon-light grey.svg"></a>
-    </div>
+    <a href="#intro">
+        <div class="side-nav-2">
+        <img src="./Website Images/Icons/Arrow Icon-light grey.svg">
+        </div>
+    </a>
 
 
 
