--- a/llp.html
+++ b/llp.html
@@ -45,9 +45,11 @@
         <a href="#intro">Back to Top<img src="./Website Images/Icons/Arrow Icon-light grey.svg"></a>
     </div>
 
-    <div class="side-nav-2">
-        <a href="#intro"><img src="./Website Images/Icons/Arrow Icon-light grey.svg"></a>
-    </div>
+    <a href="#intro">
+        <div class="side-nav-2">
+        <img src="./Website Images/Icons/Arrow Icon-light grey.svg">
+        </div>
+    </a>
 
 
     <main class="hidden">
