--- a/social-media.html
+++ b/social-media.html
@@ -67,7 +67,7 @@
         <div class="project-nav-buttons" id="margin50">
             <a href="./cookbook.html"><button class="btn-primary"><img src="./Website Images/Icons/Arrow Left.svg">Last Project</button></a>
             <a href="./index.html"><button class="btn-primary">Home</button></a>
-            <a href="./The Vault.html"><button class="btn-primary">Next Project<img src="./Website Images/Icons/Arrow Right.svg"></button></a>
+            <a href="./The-Vault.html"><button class="btn-primary">Next Project<img src="./Website Images/Icons/Arrow Right.svg"></button></a>
         </div>
 
         
