The vault pop up image

--- a/The-Vault.html
+++ b/The-Vault.html
@@ -42,137 +42,106 @@
  
 
     <div class="gallery">
-        <div class="gallery-img">
+        <div class="gallery-img round-img">
             <img class="round-img vault-img" src="./Website Images/The Vault/Pat Kav Post V2.jpg" alt="Pat Kavanagh Lacrosse Post">
         </div>
 
-        <div class="gallery-img">
-            <img class="round-img vault-img" src="./Website Images/The Vault/UK lax post (1).jpg" alt="Bryce Moad Lacrosse Edit">
-        </div>
-
-        <div class="gallery-img">
-            <img class="round-img vault-img" src="./Website Images/The Vault/Schreiber Post.jpg" alt="Tom Schreiber Lacrosse Edit">
-        </div>
-
-        <div class="gallery-img">
-            <img class="round-img vault-img" src="./Website Images/The Vault/BT Last Ride Final.jpg" alt="Ben Thomas Lacrosse Edit">
-        </div>
-
-         <div class="gallery-img">
-            <img class="round-img vault-img" src="./Website Images/The Vault/Jeff Teat Post Filtered.jpg" alt="Jeff Teat Lacrosse Edit">
-        </div>
-
-         <div class="gallery-img">
-            <img class="round-img vault-img" src="./Website Images/The Vault/Michael Sowers Post.jpg" alt="Michael Sowers Lacrosse Edit">
-        </div>
-
-        <div class="gallery-img">
-            <img class="round-img vault-img" src="./Website Images/The Vault/Lyle Thompson-Swarm Post.jpg" alt="Lyle Thompson box Lacrosse edit">
-        </div>
-
-        <div class="gallery-img">
+        <div class="gallery-img round-img">
             <img class="round-img vault-img" src="./Website Images/The Vault/Connor Shellenburger Post.jpg" alt="Connor Shellenburger Lacrosse Post">
         </div>
 
-        <div class="gallery-img">
-            <img class="round-img vault-img" src="./Website Images/The Vault/Bandits vs Knighthawks Game Post.jpg" alt="Bandits vs Knighthawks Post">
+        <div class="gallery-img round-img">
+            <img class="round-img vault-img" src="./Website Images/The Vault/Lyle Thompson-Swarm Post.jpg" alt="Lyle Thompson box Lacrosse edit">
+        </div>
+
+        <div class="gallery-img round-img">
+            <img class="round-img vault-img" src="./Website Images/The Vault/BT Last Ride Final.jpg" alt="Ben Thomas Lacrosse Edit">
         </div>
 
  
 
-        <div class="gallery-img">
+        <div class="gallery-img round-img">
+            <img class="round-img vault-img" src="./Website Images/The Vault/Jeff Teat Post Filtered.jpg" alt="Jeff Teat Lacrosse Edit">
+        </div>
+
+
+        <div class="gallery-img round-img">
+            <img class="round-img vault-img" src="./Website Images/The Vault/Schreiber Post.jpg" alt="Tom Schreiber Lacrosse Edit">
+        </div>
+
+
+
+        <div class="gallery-img round-img">
             <img class="round-img vault-img" src="./Website Images/The Vault/Jeff Teat-Signature Post.jpg" alt="Jeff Teat Tribute Lacrosse Edit">
         </div>
 
-        <div class="gallery-img">
+        <div class="gallery-img round-img">
             <img class="round-img vault-img" src="./Website Images/The Vault/Marcus Holman Edit.jpg" alt="Marcus Holamn Tribute Lacrosse Edit">
         </div>
 
-        <div class="gallery-img">
+        <div class="gallery-img round-img">
             <img class="round-img vault-img" src="./Website Images/The Vault/Lyle Thompson Signature Post.jpg" alt="Lyle Thompson Tribute Lacrosse Edit">
         </div>
 
-         <div class="gallery-img">
+        <div class="gallery-img round-img">
+            <img class="round-img vault-img" src="./Website Images/The Vault/UK lax post (1).jpg" alt="Bryce Moad Lacrosse Edit">
+        </div>
+ 
+         <div class="gallery-img round-img">
+            <img class="round-img vault-img" src="./Website Images/The Vault/Michael Sowers Post.jpg" alt="Michael Sowers Lacrosse Edit">
+        </div>
+
+        <div class="gallery-img round-img">
+            <img class="round-img vault-img" src="./Website Images/The Vault/Bandits vs Knighthawks Game Post.jpg" alt="Bandits vs Knighthawks Post">
+        </div>
+
+
+
+         <div class="gallery-img round-img">
             <img class="round-img vault-img" src="./Website Images/The Vault/Grant Ament Round 2 Lacrosse Post.jpg" alt="Grant Ment Lacrosse Edit">
         </div>
 
-         <div class="gallery-img">
+         <div class="gallery-img round-img">
             <img class="round-img vault-img" src="./Website Images/The Vault/Teat Post (1).jpg" alt="Jeff Teat Lacrosse Edit">
         </div>
         
-        <div class="gallery-img">
+        <div class="gallery-img round-img">
             <img class="round-img vault-img" src="./Website Images/The Vault/Archers Post V1 (1).jpg" alt="Archers Lacrosse Edit">
         </div>
 
-        <div class="gallery-img">
+        <div class="gallery-img round-img">
             <img class="round-img vault-img" src="./Website Images/The Vault/Rocket League Poster_Blue Filter.jpg" alt="Rocket League Poster Edit">
         </div>
 
-        <div class="gallery-img">
+        <div class="gallery-img round-img">
             <img class="round-img vault-img" src="./Website Images/The Vault/UK Wildcat Post.jpg" alt="UK wildcat Poster Edit">
         </div>
 
-        <div class="gallery-img">
+        <div class="gallery-img round-img">
             <img class="round-img vault-img" src="./Website Images/The Vault/Cotton Candy Castle Draft 1 CR Filter (1).jpg" alt="Cotton Candy Castle Photoshop Edit">
         </div>
 
-        <div class="gallery-img">
+        <div class="gallery-img round-img">
             <img class="round-img vault-img" src="./Website Images/The Vault/Design As_Presentation_Ben Thomas-01.jpg" alt="Lacrosse is made for everyone poster 1">
         </div>
 
-         <div class="gallery-img">
+         <div class="gallery-img round-img">
             <img class="round-img vault-img" src="./Website Images/The Vault/Design As_Presentation_Ben Thomas-02.jpg" alt="Lacrosse is made for everyone poster 2">
         </div>
 
-         <div class="gallery-img">
+         <div class="gallery-img round-img">
             <img class="round-img vault-img" src="./Website Images/The Vault/Design As_Presentation_Ben Thomas-03.jpg" alt="Lacrosse is made for everyone poster 3">
         </div>
+
+
 
  
     </div>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    <!-- <div class="vault-projects section-padding hidden">
-        <img class="round-img vault-img" src="./Website Images/The Vault/Pat Kav Post V2.jpg" alt="Pat Kavanagh Lacrosse Post">
-        <img class="round-img vault-img" src="./Website Images/The Vault/UK lax post (1).jpg" alt="Bryce Moad Lacrosse Edit">
-        <img class="round-img vault-img" src="./Website Images/The Vault/Schreiber Post.jpg" alt="Tom Schreiber Lacrosse Edit">
-        <img class="round-img vault-img" src="./Website Images/The Vault/BT Last Ride Final.jpg" alt="Ben Thomas Lacrosse Edit">
-        <img class="round-img vault-img" src="./Website Images/The Vault/Jeff Teat Post Filtered.jpg" alt="Jeff Teat Lacrosse Edit">
-        <img class="round-img vault-img" src="./Website Images/The Vault/Michael Sowers Post.jpg" alt="Michael Sowers Lacrosse Edit">
-        <img class="round-img vault-img" src="./Website Images/The Vault/Grant Ament Round 2 Lacrosse Post.jpg" alt="Grant Ment Lacrosse Edit">
-        <img class="round-img vault-img" src="./Website Images/The Vault/Teat Post (1).jpg" alt="Jeff Teat Lacrosse Edit">
-        <img class="round-img vault-img" src="./Website Images/The Vault/Archers Post V1 (1).jpg" alt="Archers Lacrosse Edit">
-        <img class="round-img vault-img" src="./Website Images/The Vault/Rocket League Poster_Blue Filter.jpg" alt="Rocket League Poster Edit">
-        <img class="round-img vault-img" src="./Website Images/The Vault/UK Wildcat Post.jpg" alt="UK wildcat Poster Edit">
-        <img class="round-img vault-img" src="./Website Images/The Vault/Cotton Candy Castle Draft 1 CR Filter (1).jpg" alt="Cotton Candy Castle Photoshop Edit">
-        <img class="round-img vault-img" src="./Website Images/The Vault/Design As_Presentation_Ben Thomas-01.jpg" alt="Lacrosse is made for everyone poster 1">
-        <img class="round-img vault-img" src="./Website Images/The Vault/Design As_Presentation_Ben Thomas-02.jpg" alt="Lacrosse is made for everyone poster 2">
-        <img class="round-img vault-img" src="./Website Images/The Vault/Design As_Presentation_Ben Thomas-03.jpg" alt="Lacrosse is made for everyone poster 3">
-
-    </div> -->
-
-
-
-
-
-
-
+    <div class="popup-image">
+        <span>&times;</span>
+        <img src="./Website Images/The Vault/Pat Kav Post V2.jpg" alt="Pat Kavanagh Lacrosse Post">
+    </div>
 
 </main>
 
@@ -187,9 +156,21 @@
             });
     </script>
     </div>
-    <script src="index.js"></script>
 
-    <script src="app.jss"></script>
-  
+  <script>
+
+    document.querySelectorAll('.gallery img').forEach(image =>{
+        image.onclick = () =>{
+            document.querySelector('.popup-image').style.display = 'block';
+            document.querySelector('.popup-image img').src = image.getAttribute('src');
+        }
+    });  
+
+    document.querySelector('.popup-image span').onclick = () =>{
+        document.querySelector('.popup-image').style.display = 'none';
+    }
+  </script>
+
+
 </body>
 </html>
