--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
                 I’ve got a knack for crafting visually engaging, functional designs that solve solutions and captivate audiences. Welcome to my portfolio!
             </p>
             <div class="hero-buttons">
-                <button class="btn-primary"><a href="#projects">Projects</a></button>
-                <button class="btn-primary"><a href="./About.html">About Me</a></button>
+                <a href="#projects"><button class="btn-primary">Projects</button></a>
+                <a href="./About.html"><button class="btn-primary">About Me</button></a>
 
             </div>
         </div>
