--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio Home Page</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="./Website Images/Logo/BT Favicon.svg" type="image/svg+xml">
     <script src="index.js" defer></script>
     <script src="nav-script.js" defer></script>
 
