--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 
         <div class="title-section section-padding hidden">
             <p>
-                More Projects
+                Additional Work
             </p>
             <h2>
                 Other Projects
