qualities cards updates

--- a/index.html
+++ b/index.html
@@ -339,30 +339,24 @@
 
 
         <div class="service-card-container section-padding hidden">
-            <div class="service-card sc-video">  
-                <video id="video1" id="bulb-animation" muted>
-                    <source src="./Website Images/Icons/Qualities Icons/Bulb Animation-rgb.mp4" type="video/mp4">
-                </video>          
+            <div class="service-card qualities-card">  
+                <img id="bulb-icon" src="./Website Images/Icons/Qualities Icons/Bulb Icon.svg" alt="Bulb Problem Solving Icon">
                 <h4>problem solving</h4>
                 <p class=".p2">
                     Finding unique and innovative solutions that drive actionable results
                 </p>
             </div>
           
-            <div class="service-card sc-video">  
-                <video id="video1" id="bulb-animation" muted>
-                    <source src="./Website Images/Icons/Qualities Icons/people animation-rgb.mp4" type="video/mp4">
-                </video>   
+            <div class="service-card qualities-card">  
+                <img id="people-icon" src="./Website Images/Icons/Qualities Icons/People Icon.svg" alt="People Icon">
                 <h4>collaboration</h4>
                 <p class=".p2">
                     Working with like-minded people to create stunning projects
                 </p>
             </div>
           
-            <div class="service-card sc-video">  
-                <video id="video1" id="bulb-animation" muted>
-                    <source src="./Website Images/Icons/Qualities Icons/Detail Animation.mp4" type="video/mp4">
-                </video>   
+            <div class="service-card qualities-card">  
+                <img id="detail-icon" src="./Website Images/Icons/Qualities Icons/Detail Icon.svg" alt="Attention to Detail Icon">
                 <h4>attention to detail</h4>
                 <p class=".p2">
                     Prioritizing quality and small details that create lasting impressions
