mobile navigation updates

--- a/nav.html
+++ b/nav.html
@@ -18,7 +18,7 @@
     
     <div class="menu" id="toggle-menu">
         <div class="bar bar1"></div>
-        <div class="bar bar2"></div>
+        <!-- <div class="bar bar2"></div> -->
         <div class="bar bar3"></div>
     </div>
 
@@ -26,19 +26,21 @@
 
 <div class="mobile-menu" id="mobileMenu">
     <ul class="mobile-nav-links">
-        <li><a href="index.html">WORK</a></li>
-        <li><a href="About.html">ABOUT</a></li>
-        <li><a href="Resume.html">RESUME</a></li>
-        <li><a href="Contact.html">CONTACT</a></li>
-        <li><a href="The-Vault.html">THE VAULT</a></li>
+        <h6 id="nav-menu-type">MENU</h6>
+        <li><a href="index.html"><img src="./Website Images/Icons/nav icons/Home Icon.svg" alt="home icon">WORK</a></li>
+        <li><a href="About.html"><img src="./Website Images/Icons/nav icons/About icon.svg" alt="about icon">ABOUT</a></li>
+        <li><a href="Resume.html"><img src="./Website Images/Icons/nav icons/Resume Icon.svg" alt="resume icon">RESUME</a></li>
+        <li><a href="Contact.html"><img src="./Website Images/Icons/nav icons/Contact Icon.svg" alt="contact icon">CONTACT</a></li>
+        <li><a href="The-Vault.html"><img src="./Website Images/Icons/nav icons/Vault icon.svg" alt="vault icon">THE VAULT</a></li>
     </ul>
 
     <div class="mobile-social-icons">
-        <a href="mailto: benjaminqthomas@gmail.com" target="_blank"><img src="./Website Images/Icons/Email Footer Icon.svg" alt="Email icon"></a>
-
-        <a href="https://www.linkedin.com/in/ben-q-thomas" target="_blank"><img src="./Website Images/Icons/LinkedIn Footer Icon.svg" alt="LinkedIn icon"></a>
-        <a href="https://www.instagram.com/benqthomas" target="_blank"><img src="./Website Images/Icons/Instagram Footer Icon.svg" alt="Instagram icon"></a>
-    </div>
+        <h6 id="nav-social-type">GET IN TOUCH!</h6>
+        <div class="mobile-social-links">
+            <a href="mailto: benjaminqthomas@gmail.com" target="_blank"><div class="mobile-social-bg"><img id="email-nav-icon" src="./Website Images/Icons/Email Footer Icon.svg" alt="Email icon"></div></a>
+            <a href="https://www.linkedin.com/in/ben-q-thomas" target="_blank"><div class="mobile-social-bg"><img src="./Website Images/Icons/LinkedIn Footer Icon.svg" alt="LinkedIn icon"></div></a>
+            <a href="https://www.instagram.com/benqthomas" target="_blank"><div class="mobile-social-bg"><img id="ig-nav-icon" src="./Website Images/Icons/Instagram Footer Icon.svg" alt="Instagram icon"></div></a>
+        </div>
 </div>
 
 
