Title and favicon updates

--- a/finlandia.html
+++ b/finlandia.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NCBA Conference Designs </title>
+    <title>Finlandia Infographic</title>
     <link rel="stylesheet" href="styles.css">
     <script src="index.js" defer></script>
     <script src="nav-script.js" defer></script>
+    <link rel="icon" href="./Website Images/Logo/BT Favicon.svg" type="image/svg+xml">
 
 
 
