--- a/Resume.html
+++ b/Resume.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Resume</title>
+    <title>Ben Thomas Resume</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="./Website Images/Logo/BT Favicon.svg" type="image/svg+xml">
+
     <script src="index.js" defer></script>
     <script src="nav-script.js" defer></script>
 
