--- a/The-Vault.html
+++ b/The-Vault.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css">
     <script src="index.js" defer></script>
     <script src="nav-script.js" defer></script>
+    <link rel="icon" href="./Website Images/Logo/BT Favicon.svg" type="image/svg+xml">
 
 
 
