--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio Home Page</title>
+    <title>Ben Thomas</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="./Website Images/Logo/BT Favicon.svg" type="image/svg+xml">
     <script src="index.js" defer></script>
