updated home hero and llp video autoplay

--- a/llp.html
+++ b/llp.html
@@ -437,7 +437,7 @@
         <a href="https://www.figma.com/proto/kTmTecSWGc10wAhpvQzs6k/Labor-Law-Pro-Application-Prototype?page-id=12%3A1992&node-id=4002-61141&viewport=2249%2C71%2C0.11&t=9EbMcd7UDf5VMakl-1&scaling=scale-down&content-scaling=fixed&starting-point-node-id=4002%3A61141&show-proto-sidebar=1" target="_blank"><button class="btn-primary" id="prototype-btn">View the Live Prototype Here</button></a>
 
         <div class="project-image round-img" id="final-designs">
-            <video class="video" muted loop autoplay>
+            <video class="video" muted loop autoplay playsinline preload>
                 <source src="./Website Images/LLP Application/LLP Screen Recording With BG Compressed.mp4" type="video/mp4">
             </video>
             <img src="./Website Images/LLP Application/Screen Mockups with Background/LLP - Login.jpg" alt="Login Screen">
