pristine clean hero title update

--- a/pristine clean case study.html
+++ b/pristine clean case study.html
@@ -20,7 +20,7 @@
         <div class="project-hero">
             <div class="ph-content">
                 <h2 class="h10">
-                    Website Design and Branding
+                    UI/UX Design and Branding
                 </h2>
                 <h1 class="h9">
                     Pristine Clean
