update llp hero img and scroll to top button

--- a/llp.html
+++ b/llp.html
@@ -28,7 +28,7 @@
                     Labor Law Pro
                 </h1>
             </div>
-            <img class="round-img" src="./Website Images/LLP Application/Screen Mockups with Background/LLP Hero Desktop v2.jpg" alt="LLP app dashborad">
+            <img class="round-img" src="./Website Images/LLP Application/Screen Mockups with Background/LLP - Dashboard.jpg" alt="LLP app dashborad">
         </div>
     </div>
 
