polaroid photo hover

--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
             <h1>
                 Hello There! <span class="h1-gradient">I'm Ben</span>
             </h1>
+            <img class="polaroid-photos" src="./Website Images/Assets/Hero hover photo edit-v3.png" alt="polaroid photos of ben thomas">
+
             <p class="p2">
                 I’ve got a knack for crafting visually engaging, functional designs that solve solutions and captivate audiences. Welcome to my portfolio!
             </p>
