Updated arrow application

--- a/arrow.html
+++ b/arrow.html
@@ -411,12 +411,17 @@
         
             </p>
         </div>
-        <!-- <div class="final-pc-buttons">
-            <a href="#"><button class="btn-primary">View the Live Prototype Here</button></a>
-        </div> -->
+        <div class="final-pc-buttons">
+            <a href="https://www.figma.com/proto/ET2GNOrtYh9ZRbLssQPj75/Arrow-Prototype-and-Case-Study?page-id=2097%3A2430&node-id=2108-5604&viewport=-2429%2C2331%2C0.26&t=wYHkOYnTSMH7GwYJ-1&scaling=scale-down&content-scaling=fixed&starting-point-node-id=2108%3A5604&show-proto-sidebar=1" target="_blank">
+                <button class="btn-primary">View the Live Prototype Here</button></a>
+        </div>
 
         <div class="project-image round-img" id="final-designs">
-            <img src="./Website Images/Arrow/Arrow Final Design.jpg" alt="Arrow Final Design Dashboard">
+            <img src="./Website Images/Arrow/Arrow Final Design-Dashboard.jpg" alt="Arrow Final Design Dashboard">
+            <img src="./Website Images/Arrow/Arrow Final Design-Benefits.jpg" alt="Arrow Final Design Benefits">
+            <img src="./Website Images/Arrow/Arrow Final Design-Tax.jpg" alt="Arrow Final Design Tax">
+
+
         </div>
 
         
