updated project nav and cropped project iamges

--- a/index.html
+++ b/index.html
@@ -75,22 +75,23 @@
                 </div>
             </a>
 
-            <a href="./pristine clean case study.html" class="link-wrapper">
-                <div class="project-card-1 hidden" id="pc">
+            <a href="./arrow.html" class="link-wrapper">
+                <div class="project-card-1 hidden" id="arrow">
                     <div class="pc1-main-content">
                         <div class="pc1-content">
                             <h3>
-                                Pristine Clean
+                                Arrow Application
                             </h3>
                             <p class="p3">
-                                UI/UX Design | Branding           
+                                UI/UX Design
                             </p>
                         </div>
                         <div class="pc1-button">
                                 <img src="./Website Images/Icons/Arrow Icon-light grey.svg" alt="arrow icon">
                         </div>
                     </div>
-                    <img src="./Website Images/Pristine Cline/PC Home Page-Portfolio Home Mockup.jpg" alt="Labor Law Pro Application Dashboard" class="pc1-img">
+                        <img src="./Website Images/Arrow/Arrow Dashboard Home Screen Mockup.jpg" alt="Arrow Application Dashboard" class="pc1-img">
+
                 </div>
             </a>
 
@@ -114,26 +115,30 @@
                 </div>
             </a>
 
-            <a href="./arrow.html" class="link-wrapper">
-                <div class="project-card-1 hidden" id="arrow">
+            <a href="./pristine clean case study.html" class="link-wrapper">
+                <div class="project-card-1 hidden" id="pc">
                     <div class="pc1-main-content">
                         <div class="pc1-content">
                             <h3>
-                                Arrow Application
+                                Pristine Clean
                             </h3>
                             <p class="p3">
-                                UI/UX Design
+                                UI/UX Design and Web Design           
                             </p>
                         </div>
                         <div class="pc1-button">
                                 <img src="./Website Images/Icons/Arrow Icon-light grey.svg" alt="arrow icon">
                         </div>
                     </div>
-                    <img src="./Website Images/Arrow/Arrow Dashboard Home Screen Mockup.jpg" alt="Arrow Application Dashboard" class="pc1-img">
-
-                    </div>
+                    <img src="./Website Images/Pristine Cline/PC Home Page-Portfolio Home Mockup.jpg" alt="Labor Law Pro Application Dashboard" class="pc1-img">
                 </div>
             </a>
+
+
+
+
+        </div>
+
 
         <div class="title-section section-padding hidden">
             <p>
