--- a/pristine clean case study.html
+++ b/pristine clean case study.html
@@ -20,7 +20,7 @@
         <div class="project-hero">
             <div class="ph-content">
                 <h2 class="h10">
-                    UI/UX Design and Branding
+                    UI/UX Design and Web Design
                 </h2>
                 <h1 class="h9">
                     Pristine Clean
@@ -577,9 +577,9 @@
         </div>
 
         <div class="project-nav-buttons scroll-margin" id="other-projects" id="margin50">
-            <a href="./llp.html"><button class="btn-primary"><img src="./Website Images/Icons/Arrow Left.svg">Last Project</button></a>
+            <a href="./katsbrune.html"><button class="btn-primary"><img src="./Website Images/Icons/Arrow Left.svg">Last Project</button></a>
             <a href="./index.html"><button class="btn-primary">Home</button></a>
-            <a href="./katsbrune.html"><button class="btn-primary">Next Project<img src="./Website Images/Icons/Arrow Right.svg"></button></a>
+            <a href="./ignite.html"><button class="btn-primary">Next Project<img src="./Website Images/Icons/Arrow Right.svg"></button></a>
         </div>
 
         <div id="projects">
