--- a/projects.html
+++ b/projects.html
@@ -20,15 +20,15 @@
                 </div>
             </a>
 
-            <a href="./pristine clean case study.html">
+            <a href="./arrow.html">
                 <div class="project-card">
                     <div class="project-card-img">
-                            <img src="./Website Images/Pristine Cline/PC Hero Desktop-Red.jpg" class="pc-img" alt="#">
+                            <img src="./Website Images/Arrow/Arrow Project Card Hero Dashboard.jpg" class="pc-img" alt="#">
                     </div>
                     <div class="project-card-content">
                         <div class="project-card-type">
                             <h4 class="pc-header">
-                                Pristine Clean
+                                Arrow Application
                             </h4>
                             <p class="p3 pc-subheader">
                                 UI/UX Design
@@ -38,6 +38,7 @@
                     </div>
                 </div>
             </a>
+
 
             <a href="./katsbrune.html">
                 <div class="project-card">
@@ -58,24 +59,27 @@
                 </div>
             </a>
 
-            <a href="./arrow.html">
+            
+            <a href="./pristine clean case study.html">
                 <div class="project-card">
                     <div class="project-card-img">
-                            <img src="./Website Images/Arrow/Arrow Project Card Hero Dashboard.jpg" class="pc-img" alt="#">
+                            <img src="./Website Images/Pristine Cline/PC Hero Desktop-Red.jpg" class="pc-img" alt="#">
                     </div>
                     <div class="project-card-content">
                         <div class="project-card-type">
                             <h4 class="pc-header">
-                                Arrow Application
+                                Pristine Clean
                             </h4>
                             <p class="p3 pc-subheader">
-                                UI/UX Design
+                                UI/UX & Web Design
                             </p>
                         </div>
                         <img src="./Website Images/Icons/Arrow Icon-light grey.svg" class="arrow-pc" alt="arrow indicator">
                     </div>
                 </div>
             </a>
+
+
 
 
             <a href="./ignite.html">
