updated scroll animation

--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
             </h2>
         </div>
 
-        <div class="featured-projects section-padding scroll-margin" id="projects">
+        <div class="featured-projects section-padding scroll-margin hidden" id="projects">
             <a href="./llp.html" class="link-wrapper">
-                <div class="project-card-1 hidden" id="LLP">
+                <div class="project-card-1 " id="LLP">
                     <div class="pc1-main-content">
                         <div class="pc1-content">
                             <h3>
@@ -76,7 +76,7 @@
             </a>
 
             <a href="./arrow.html" class="link-wrapper">
-                <div class="project-card-1 hidden" id="arrow">
+                <div class="project-card-1 " id="arrow">
                     <div class="pc1-main-content">
                         <div class="pc1-content">
                             <h3>
@@ -96,7 +96,7 @@
             </a>
 
             <a href="./katsbrune.html" class="link-wrapper">
-                <div class="project-card-1 hidden" id="katsbrune">
+                <div class="project-card-1 " id="katsbrune">
                     <div class="pc1-main-content">
                         <div class="pc1-content">
                             <h3>
@@ -116,7 +116,7 @@
             </a>
 
             <a href="./pristine clean case study.html" class="link-wrapper">
-                <div class="project-card-1 hidden" id="pc">
+                <div class="project-card-1" id="pc">
                     <div class="pc1-main-content">
                         <div class="pc1-content">
                             <h3>
