--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             </h2>
         </div>
 
-        <div class="featured-projects section-padding scroll-margin hidden" id="projects">
+        <div class="featured-projects section-padding scroll-margin" id="projects">
             <a href="./llp.html" class="link-wrapper">
                 <div class="project-card-1 " id="LLP">
                     <div class="pc1-main-content">
