arrow updated role

--- a/arrow.html
+++ b/arrow.html
@@ -90,7 +90,8 @@
                         <p class="p4">My Role</p>
                         <p class="info-bold">
                             Lead UI/UX Designer <br>
-                            Lead Graphic Designer
+                            Lead Graphic Designer <br>
+                            Front-End Developer
                         </p>
                     </div>
                 </div>
