Product design updates

--- a/pristine clean case study.html
+++ b/pristine clean case study.html
@@ -20,7 +20,7 @@
         <div class="project-hero">
             <div class="ph-content">
                 <h2 class="h10">
-                    UI/UX Design and Web Design
+                    Product and Brand Design
                 </h2>
                 <h1 class="h9">
                     Pristine Clean
@@ -85,7 +85,7 @@
                     <div class="info-section">
                         <p class="p4">My Role</p>
                         <p class="info-bold">
-                            UI/UX Designer <br>
+                            Product Designer <br>
                             Graphic Designer
                         </p>
                     </div>
