--- a/projects.html
+++ b/projects.html
@@ -1,25 +1,6 @@
 
         <div class="project-nav-container">
 
-            <a href="./llp.html">
-                <div class="project-card">
-                    <div class="project-card-img">
-                            <img src="./Website Images/LLP Application/Screen Mockups with Background/LLP - Project Card Dashboard View.jpg" class="pc-img" alt="#">
-                    </div>
-                    <div class="project-card-content">
-                        <div class="project-card-type">
-                            <h4 class="pc-header">
-                                labor law pro app
-                            </h4>
-                            <p class="p3 pc-subheader">
-                                UI/UX Design
-                            </p>
-                        </div>
-                        <img src="./Website Images/Icons/Arrow Icon-light grey.svg" class="arrow-pc" alt="arrow indicator">
-                    </div>
-                </div>
-            </a>
-
             <a href="./arrow.html">
                 <div class="project-card">
                     <div class="project-card-img">
@@ -31,7 +12,7 @@
                                 Arrow Application
                             </h4>
                             <p class="p3 pc-subheader">
-                                UI/UX Design
+                                Product/UX Design
                             </p>
                         </div>
                         <img src="./Website Images/Icons/Arrow Icon-light grey.svg" class="arrow-pc" alt="arrow indicator">
@@ -39,6 +20,24 @@
                 </div>
             </a>
 
+            <a href="./llp.html">
+                <div class="project-card">
+                    <div class="project-card-img">
+                            <img src="./Website Images/LLP Application/Screen Mockups with Background/LLP - Project Card Dashboard View.jpg" class="pc-img" alt="#">
+                    </div>
+                    <div class="project-card-content">
+                        <div class="project-card-type">
+                            <h4 class="pc-header">
+                                labor law pro app
+                            </h4>
+                            <p class="p3 pc-subheader">
+                                Product/UX Design
+                            </p>
+                        </div>
+                        <img src="./Website Images/Icons/Arrow Icon-light grey.svg" class="arrow-pc" alt="arrow indicator">
+                    </div>
+                </div>
+            </a>
 
             <a href="./katsbrune.html">
                 <div class="project-card">
@@ -58,8 +57,7 @@
                     </div>
                 </div>
             </a>
-
-            
+  
             <a href="./pristine clean case study.html">
                 <div class="project-card">
                     <div class="project-card-img">
@@ -71,16 +69,13 @@
                                 Pristine Clean
                             </h4>
                             <p class="p3 pc-subheader">
-                                UI/UX & Web Design
+                                Product/Brand Design
                             </p>
                         </div>
                         <img src="./Website Images/Icons/Arrow Icon-light grey.svg" class="arrow-pc" alt="arrow indicator">
                     </div>
                 </div>
             </a>
-
-
-
 
             <a href="./ignite.html">
                 <div class="project-card">
