--- a/arrow.html
+++ b/arrow.html
@@ -21,7 +21,7 @@
         <div class="project-hero" id="intro">
             <div class="ph-content">
                 <h2 class="h10">
-                    ui/ux design
+                    Product and UX design
                 </h2>
                 <h1 class="h9">
                     Arrow application
@@ -530,9 +530,9 @@
         </div>
 
         <div class="project-nav-buttons scroll-margin" id="other-projects" id="margin50">
-            <a href="./llp.html"><button class="btn-primary"><img src="./Website Images/Icons/Arrow Left.svg">Last Project</button></a>
+            <a href="./index.html"><button class="btn-primary"><img src="./Website Images/Icons/Arrow Left.svg">Last Project</button></a>
             <a href="./index.html"><button class="btn-primary">Home</button></a>
-            <a href="./katsbrune.html"><button class="btn-primary">Next Project<img src="./Website Images/Icons/Arrow Right.svg"></button></a>
+            <a href="./llp.html"><button class="btn-primary">Next Project<img src="./Website Images/Icons/Arrow Right.svg"></button></a>
         </div>
 
         <div id="projects">
