--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <img src="./Website Images/Assets/Grid Hero Image-Final.png" alt="Faded Grid Background">
         <div class="hero-content hidden">
             <h5>
-                UI/UX DESIGNER | GRAPHIC DESIGNER
+                PRODUCT DESIGNER | GRAPHIC DESIGNER
             </h5>
             <h1>
                 Hello There! <span class="h1-gradient">I'm Ben</span>
@@ -54,7 +54,27 @@
             </h2>
         </div>
 
+            <a href="./arrow.html" class="link-wrapper">
+                <div class="project-card-1 " id="arrow">
+                    <div class="pc1-main-content">
+                        <div class="pc1-content">
+                            <h3>
+                                Arrow Application
+                            </h3>
+                            <p class="p3">
+                                Product/UX Design
+                            </p>
+                        </div>
+                        <div class="pc1-button">
+                                <img src="./Website Images/Icons/Arrow Icon-light grey.svg" alt="arrow icon">
+                        </div>
+                    </div>
+                        <img src="./Website Images/Arrow/Arrow Dashboard Home Screen Mockup.jpg" alt="Arrow Application Dashboard" class="pc1-img">
+
+                </div>
+            </a>
         <div class="featured-projects section-padding scroll-margin" id="projects">
+            
             <a href="./llp.html" class="link-wrapper">
                 <div class="project-card-1 " id="LLP">
                     <div class="pc1-main-content">
@@ -63,7 +83,7 @@
                                 Labor Law Pro Application
                             </h3>
                             <p class="p3">
-                                UI/UX Design
+                                Product/UX Design
                             </p>
                         </div>
                         <div class="pc1-button">
@@ -75,25 +95,7 @@
                 </div>
             </a>
 
-            <a href="./arrow.html" class="link-wrapper">
-                <div class="project-card-1 " id="arrow">
-                    <div class="pc1-main-content">
-                        <div class="pc1-content">
-                            <h3>
-                                Arrow Application
-                            </h3>
-                            <p class="p3">
-                                UI/UX Design
-                            </p>
-                        </div>
-                        <div class="pc1-button">
-                                <img src="./Website Images/Icons/Arrow Icon-light grey.svg" alt="arrow icon">
-                        </div>
-                    </div>
-                        <img src="./Website Images/Arrow/Arrow Dashboard Home Screen Mockup.jpg" alt="Arrow Application Dashboard" class="pc1-img">
 
-                </div>
-            </a>
 
             <a href="./katsbrune.html" class="link-wrapper">
                 <div class="project-card-1 " id="katsbrune">
@@ -123,7 +125,7 @@
                                 Pristine Clean
                             </h3>
                             <p class="p3">
-                                UI/UX Design and Web Design           
+                                Product Design | Brand Design          
                             </p>
                         </div>
                         <div class="pc1-button">
