--- a/katsbrune.html
+++ b/katsbrune.html
@@ -182,7 +182,7 @@
         </div>
 
         <div class="project-nav-buttons scroll-margin" id="other-projects" id="margin50">
-            <a href="./arrow.html"><button class="btn-primary"><img src="./Website Images/Icons/Arrow Left.svg">Last Project</button></a>
+            <a href="./llp.html"><button class="btn-primary"><img src="./Website Images/Icons/Arrow Left.svg">Last Project</button></a>
             <a href="./index.html"><button class="btn-primary">Home</button></a>
             <a href="./pristine clean case study.html"><button class="btn-primary">Next Project<img src="./Website Images/Icons/Arrow Right.svg"></button></a>
         </div>
