--- a/llp.html
+++ b/llp.html
@@ -89,7 +89,7 @@
                     <div class="info-section">
                         <p class="p4">My Role</p>
                         <p class="info-bold">
-                            Lead UX Designer <br>
+                            Lead Product Designer <br>
                             Lead Graphic Designer
                         </p>
                     </div>
@@ -498,9 +498,9 @@
         </div>
 
         <div class="project-nav-buttons scroll-margin" id="other-projects" id="margin50">
-            <a href="./index.html"><button class="btn-primary"><img src="./Website Images/Icons/Arrow Left.svg">Last Project</button></a>
+            <a href="./arrow.html"><button class="btn-primary"><img src="./Website Images/Icons/Arrow Left.svg">Last Project</button></a>
             <a href="./index.html"><button class="btn-primary">Home</button></a>
-            <a href="./arrow.html"><button class="btn-primary">Next Project<img src="./Website Images/Icons/Arrow Right.svg"></button></a>
+            <a href="./katsbrune.html"><button class="btn-primary">Next Project<img src="./Website Images/Icons/Arrow Right.svg"></button></a>
         </div>
 
         <div id="projects">
