Featured Project Updates
Hid KY projects to prevent people finding out im a fraud

--- a/projects.html
+++ b/projects.html
@@ -1,7 +1,7 @@
 
         <div class="project-nav-container">
 
-            <a href="./arrow.html">
+            <!-- <a href="./arrow.html">
                 <div class="project-card">
                     <div class="project-card-img">
                             <img src="./Website Images/Arrow/Arrow Project Card Hero Dashboard.jpg" class="pc-img" alt="#">
@@ -37,26 +37,9 @@
                         <img src="./Website Images/Icons/Arrow Icon-light grey.svg" class="arrow-pc" alt="arrow indicator">
                     </div>
                 </div>
-            </a>
+            </a> -->
 
-            <a href="./katsbrune.html">
-                <div class="project-card">
-                    <div class="project-card-img">
-                            <img src="./Website Images/Katsbrune/The Katsbrune-Sign Mockup-2 (1).jpg" class="pc-img" alt="#">
-                    </div>
-                    <div class="project-card-content">
-                        <div class="project-card-type">
-                            <h4 class="pc-header">
-                                THe Katsbrune
-                            </h4>
-                            <p class="p3 pc-subheader">
-                                Brand Identity
-                            </p>
-                        </div>
-                        <img src="./Website Images/Icons/Arrow Icon-light grey.svg" class="arrow-pc" alt="arrow indicator">
-                    </div>
-                </div>
-            </a>
+
   
             <a href="./pristine clean case study.html">
                 <div class="project-card">
@@ -70,6 +53,25 @@
                             </h4>
                             <p class="p3 pc-subheader">
                                 Product/Brand Design
+                            </p>
+                        </div>
+                        <img src="./Website Images/Icons/Arrow Icon-light grey.svg" class="arrow-pc" alt="arrow indicator">
+                    </div>
+                </div>
+            </a>
+
+                        <a href="./katsbrune.html">
+                <div class="project-card">
+                    <div class="project-card-img">
+                            <img src="./Website Images/Katsbrune/The Katsbrune-Sign Mockup-2 (1).jpg" class="pc-img" alt="#">
+                    </div>
+                    <div class="project-card-content">
+                        <div class="project-card-type">
+                            <h4 class="pc-header">
+                                THe Katsbrune
+                            </h4>
+                            <p class="p3 pc-subheader">
+                                Brand Identity
                             </p>
                         </div>
                         <img src="./Website Images/Icons/Arrow Icon-light grey.svg" class="arrow-pc" alt="arrow indicator">
