--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             </h2>
         </div>
 
-            <a href="./arrow.html" class="link-wrapper">
+            <!-- <a href="./arrow.html" class="link-wrapper">
                 <div class="project-card-1 " id="arrow">
                     <div class="pc1-main-content">
                         <div class="pc1-content">
@@ -72,10 +72,10 @@
                         <img src="./Website Images/Arrow/Arrow Dashboard Home Screen Mockup.jpg" alt="Arrow Application Dashboard" class="pc1-img">
 
                 </div>
-            </a>
+            </a> -->
         <div class="featured-projects section-padding scroll-margin" id="projects">
             
-            <a href="./llp.html" class="link-wrapper">
+            <!-- <a href="./llp.html" class="link-wrapper">
                 <div class="project-card-1 " id="LLP">
                     <div class="pc1-main-content">
                         <div class="pc1-content">
@@ -87,35 +87,16 @@
                             </p>
                         </div>
                         <div class="pc1-button">
-                                <!-- <p class="p3">View Project</p> -->
                                 <img src="./Website Images/Icons/Arrow Icon-light grey.svg" alt="arrow icon">
                         </div>
                     </div>
                     <img src="./Website Images/LLP Application/LLP - Dashboard-Home Page Mockup.jpg" alt="Labor Law Pro Application Dashboard" class="pc1-img">
                 </div>
-            </a>
+            </a> -->
 
 
 
-            <a href="./katsbrune.html" class="link-wrapper">
-                <div class="project-card-1 " id="katsbrune">
-                    <div class="pc1-main-content">
-                        <div class="pc1-content">
-                            <h3>
-                                The katsbrune bookstore & cafe
-                            </h3>
-                            <p class="p3">
-                                Brand Identity and Guidelines                        
-                            </p>
-                        </div>
-                        <div class="pc1-button">
-                                <img src="./Website Images/Icons/Arrow Icon-light grey.svg" alt="arrow icon">
-                        </div>
-                    </div>
-                    <img src="./Website Images/Katsbrune/Brand Identity Paper Mockup.png" alt="Arrow Application Dashboard" class="pc1-img">
 
-                </div>
-            </a>
 
             <a href="./pristine clean case study.html" class="link-wrapper">
                 <div class="project-card-1" id="pc">
@@ -136,7 +117,25 @@
                 </div>
             </a>
 
+            <a href="./katsbrune.html" class="link-wrapper">
+                <div class="project-card-1 " id="katsbrune">
+                    <div class="pc1-main-content">
+                        <div class="pc1-content">
+                            <h3>
+                                The katsbrune bookstore & cafe
+                            </h3>
+                            <p class="p3">
+                                Brand Identity and Guidelines                        
+                            </p>
+                        </div>
+                        <div class="pc1-button">
+                                <img src="./Website Images/Icons/Arrow Icon-light grey.svg" alt="arrow icon">
+                        </div>
+                    </div>
+                    <img src="./Website Images/Katsbrune/Brand Identity Paper Mockup.png" alt="Arrow Application Dashboard" class="pc1-img">
 
+                </div>
+            </a>
 
 
         </div>
